--- a/view/index.ejs
+++ b/view/index.ejs
@@ -45,6 +45,7 @@
     </style>
 </head>
 <body>
+    <h1>Seja Bem Vindo <%=nome%> </h1>
     <h1>Formulário Estilizado</h1>
 
     <form action="/enviar-formulario" method="POST">
