sequelize, mysql e env cofigurado

--- a/view/partials/form.ejs
+++ b/view/partials/form.ejs
@@ -8,9 +8,9 @@
                  Action é a rota onde irá salvar os dados-->
             <form method="POST" action="/salvaDadoPerguntas">
                 <br><label>Título:</label>
-                <br><input type="text" placeholder="Escreva o título da sua pergunta" class="form-control">
+                <br><input name="title" type="text" placeholder="Escreva o título da sua pergunta" class="form-control">
                 <br><label>Descrição:</label>
-                <br><textarea placeholder="Descreve acerca da sua pergunta" class="form-control"></textarea>
+                <br><textarea name="description" placeholder="Descreve acerca da sua pergunta" class="form-control"></textarea>
                 <br><button class="btn btn-danger">Enviar</button>
             </form>
         </div>
