--- a/view/partials/navbar.ejs
+++ b/view/partials/navbar.ejs
@@ -2,4 +2,5 @@
     <a class="navbar-brand" href="/">
         <img width="6%" height="6%" src="/images/logo.png" alt="">
     </a>
+    <a class="navbar-brand btn btn-warning" href="/perguntar">Fazer pergunta</a>
 </nav>
