table answer with sequelize

--- a/view/index.ejs
+++ b/view/index.ejs
@@ -19,7 +19,7 @@
             </div>
             <br>
             <div class="card-footer">
-                <button class="btn btn-danger">Responder</button>
+                <a href="/perguntas/<%= pergunta.id %>"><button class="btn btn-danger">Responder</button></a>
             </div>
         </div>
         <br>
